--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.9
-  intl: ^0.19.0
+    flutter_localizations:
+    sdk: flutter
+    cupertino_icons: ^1.0.2
+    flutter_svg: ^2.0.9
+   intl: ^0.19.0
 
 
 
@@ -49,7 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
- 
+
 
 
 # For information on the generic Dart part of this file, see the
