--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,7 +28,12 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-	
+		<key>CFBundleLocalizations</key>
+	<array>
+	   <string>en</string>
+	   <string>es</string>
+	</array>
+     
 </dict>
 </plist>
 
