--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,16 +58,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+ generate : true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
+assets:
       - assets/icons/
-  #   - images/a_dot_ham.jpeg
+      #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -80,7 +81,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
+fonts:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins/Poppins-Bold.ttf
